--- a/verl/trainer/config/model/hf_model.yaml
+++ b/verl/trainer/config/model/hf_model.yaml
@@ -39,6 +39,9 @@ enable_activation_offload: False
 # whether to use remove padding. Only valid when we use hf model definition
 use_remove_padding: False
 
+# LoRA initialization method (e.g., pissa)
+lora_init: null
+
 # Set to positive value to enable LoRA (e.g., 32)
 lora_rank: 0
 
